tests/toylang/neg/001543_mutation.toylang
program a = { var while a : bool; } .
